--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-<htm>
+<html>
 <head>
 
 </head>
+<title>
+    git web pages
+</title>
+<body>
+
+    <h1> welcome to github</h1>
+</body>
 
 
 </html>
